# vector-guardrails

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/workflows/: ci.yml
docs/: README.md  anchor-terminology.md  generating-snapshots.md  thresholds-and-tuning.md  when-to-use.md
examples/: README.md  api_usage.py
examples/01_basic_comparison/: README.md  candidate.json
examples/02_anchor_mismatch/: README.md  baseline.json  candidate.json
examples/03_high_churn/: README.md  baseline.json  candidate.json
issues/: issue_empty_anchor_intersection.md  issue_min_anchors_unused.md
src/vector_guardrails/: __init__.py  __main__.py  alignment.py  cli.py  compare.py  engine.py  io.py  metrics.py  models.py  risk.py  validation.py
tests/: test_cli.py  test_compare_report.py  test_engine_identity_metrics.py  test_metrics_displacement.py  test_metrics_overlap.py  test_models.py  test_risk.py  test_validation_and_alignment.py
