[project]
name = "vector-guardrails"
version = "0.1.0"
description = "Safety-first guardrails to detect risky semantic changes in embedding-based retrieval and recommendation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Rohit Sharma" }]

dependencies = [
  "numpy>=1.26",
  "pydantic>=2.6",
]

keywords = [
  "search",
  "recommendation",
  "recsys",
  "embeddings",
  "vector-search",
  "knn",
  "nearest-neighbors",
  "drift",
  "stability",
  "guardrails",
  "retrieval",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/RohitSh26/vector-guardrails"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vector_guardrails"]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=7.0.0", "ruff>=0.14.10"]

[project.optional-dependencies]
cli = ["rich>=13.7"]
viz = ["matplotlib>=3.8"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
